# toukakoukan

./: .gitignore  Cargo.toml  Makefile.toml  README.md  create_tables.sql
.github/: dependabot.yml
.github/workflows/: rust.yml  tests.yml
back_end/: .env  Cargo.toml
back_end/.sqlx/: query-07a54802b5c1f55a006e25722388c5a5e2312af3a551bc115a87f039fe1e13f1.json  query-1998ce72050eac2d6c7eb28282e75e6f25e15e17e7d617318f97ce9ae18c0eb8.json  query-3b81708eaad89afd37f89f6f905971d3ee1d71ebe823d1813e7afdae1a389559.json  query-522a2527443f7fd81246b5ca045cf299485c9e1faaf61c918a7d5a9e2e30347a.json  query-8469792bd25d902d0508337a071a9c6a7baa3897e2f8fba279233cefdb2514e3.json  query-9e1a0ad98f2413c6c125f65043b1bcefd1828ba9c87a92ae3c5ff800ca82f4bc.json  query-b7e1840baa8f2b0504228cf64e23ffd66a76dbfdb584ed3efd5962a8e4b00db9.json  query-f14f5aa0ea33640bd34508ac3a9cf6e3706aee24c80988aaa228e10e4a7bceed.json
back_end/fixtures/: all.sql
back_end/migrations/: 20231224221258_default.sql
back_end/src/: api.rs  authenticator.rs  group.rs  main.rs  routes.rs  services.rs  types.rs  users.rs  usersecure.rs
back_end/src/routes/: expenses.rs
front_end/: .eslintrc.cjs  eslint.config.js  index.html  jsconfig.json  next.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
front_end/src/: App.svelte  main.js  types.ts
front_end/src/app/: expenseview.tsx  globals.css  main.tsx  page.tsx  userview.tsx
front_end/src/app/AddExpense/: page.tsx
front_end/src/app/CreateUser/: page.tsx
front_end/src/app/components/: addexpenseview.tsx  expensestable.tsx  expenseview.tsx  userview.tsx
front_end/src/app/createuser/: page.js
front_end/src/js/: api.ts  auth.js  auth.ts  consts.js  endpoints.js  types.ts  utils.ts
front_end/src/pages/: AddExpense.svelte  AddGroup.svelte  CreateUser.svelte  EditExpense.svelte  Expenses.svelte  Login.svelte  MainView.svelte  NotFound.svelte  ReloadPrompt.svelte
front_end/src/widgets/: ExpensesInfoWidget.svelte  ExpensesWidget.svelte
json/: service_worker.js
src/: auth.rs  main.rs  types.rs
static/: manifest.json
templates/: index.html.hbs
web/: package-lock.json  package.json  tailwind.config.cjs
web-remix/: package-lock.json  package.json
web-remix/app/: root.jsx
web/src/: app.html
web/src/routes/: +page.svelte
web/src/routes/add/[groupid]/: +page.svelte
