[package]
name = "splitinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing", "macros", "headers"] }
axum-login = "0.9.0"
axum-macros = "0.3.8"
axum-template = { version = "1.0.0", features = ["handlebars"] }
handlebars = { version = "4.5.0", features = ["dir_source"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
