[package]
name = "toukakoukan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Narfinger/betsubetsu"
license = ""
categories = []
description = ""


[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
log = "0.4.22"
password-auth = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = [
    "sqlite",
    "time",
    "runtime-tokio",
    "migrate",
    "macros",
] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tower-sessions = { version = "0.12" }
tower-sessions-moka-store = "0.13.0"
tower-sessions-sqlx-store = { version = "0.13.0", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yansi = "1.0.1"
